...
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnNavAdminWorkspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_bar_workspace"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_gravity="center"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginEnd="40dp"
            />

        <Button
            android:id="@+id/btnNavAdminProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_bar_profile"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:textSize="16sp"
...
