<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#E9ECEF"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/references_parent">

    <ImageButton
        android:id="@+id/refBtnGoBack"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:scaleX="0.7"
        android:scaleY="0.7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/undo" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_referencing_style"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:paddingTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/refBtnGoBack"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvSelectRefStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="-20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp">

            <CheckBox
                android:id="@+id/refAPA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:buttonTint="#6247AA"
                android:text="@string/APA" >
            </CheckBox>

            <CheckBox
                android:id="@+id/refOxford"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/refAPA"
                app:layout_constraintStart_toStartOf="parent"
                android:buttonTint="#6247AA"
                android:text="@string/oxford" />

            <CheckBox
                android:id="@+id/refACM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/refOxford"
                app:layout_constraintStart_toStartOf="parent"
                android:buttonTint="#6247AA"
                android:text="@string/acm" />

            <CheckBox
                android:id="@+id/refHarvard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/refACM"
                app:layout_constraintStart_toStartOf="parent"
                android:buttonTint="#6247AA"
                android:text="@string/harvard" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvRefStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_style"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toBottomOf="@+id/cvSelectRefStyle"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvRefStyleGuide"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        android:layout_marginTop="5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvSelectRefStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvGeneralInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="General Instructions:"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/refStyleFragment"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/tvGeneralInstructions"
                app:layout_constraintBottom_toBottomOf="parent">
            </androidx.fragment.app.FragmentContainerView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>