<resources>
    <string name="app_name">PMS</string>
    <string name="sign_in">Sign-In</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="remember_password">Remember me?</string>
    <string name="sign_up">Sign-Up</string>
    <string name="welcome">Welcome !</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="reset_password">reset password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create an account !</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="uni_access_code">University access code</string>
    <string name="member_already">Already a member?</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nav_bar_workspace">Workspace</string>
    <string name="nav_bar_notifications">Notifications</string>
    <string name="nav_bar_supervisor">Supervisor</string>
    <string name="nav_bar_profile">Profile</string>
    <string name="kanban_boards">Kanban boards</string>
    <string name="new_board_btn">New board</string>
    <string name="first_kanban_board">Main board</string>
    <string name="calendar">Calendar</string>
    <string name="referencing_guide_title">A guide to referencing</string>
    <string name="select_referencing_style">Select Referencing Style</string>
    <string name="oxford">Oxford</string>
    <string name="acm">ACM</string>
    <string name="harvard">Harvard</string>
    <string name="selected_style">Style</string>
    <string name="ACMinfo">[1] Name(s) of author(s) and/or editor(s). Year of publication. Title of the article/name of book. Bibliographic information (e.g. name of publisher, city of publication and page number.)</string>
    <string name="OxfordInfo">"[1] Authors given name or initial before the last name. Title. Place of publication. Publisher. Date of publication. The page reference. "</string>
    <string name="HarvardInfo">[1] Author, Year. Title. Edition. Place: Publisher</string>
    <string name="APAInfo">Author, A.A (year of publication). Title of work/article. Page range. Location: Publisher/doi/web link</string>
    <string name="APA">APA</string>
    <string name="delete_btn_cont_desc">Delete button</string>
    <string name="color_btn_cont_desc">Open/close color palette</string>
    <string name="drag_btn_cont_desc">Hold and drag task button</string>
    <string name="task_edit_text_hint">Enter your task here</string>
    <string name="move_btn_cont_desc">Send task to next tasklist button</string>
    <string name="blue_btn_cont_desc">Blue color button</string>
    <string name="green_btn_cont_desc">Green color button</string>
    <string name="yellow_btn_cont_desc">Yelow color button</string>
    <string name="pink_btn_cont_desc">Pink color button</string>

</resources>