<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:textAlignment="center"
    android:id="@+id/sign_in">

<!--    <include-->
<!--        app:layout_constraintTop_toBottomOf="@+id/welcome"-->
<!--        layout="@layout/activity_main"-->
<!--        />-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSignIn"
        android:layout_width="350dp"
        android:layout_height="400dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="230dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:backgroundTint="#6247AA"
            app:cornerRadius="60dp"
            app:iconPadding="8dp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="280dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#6247AA"
            android:textSize="20sp"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="60dp"
            app:iconPadding="8dp"
            app:rippleColor="#33AAAAAA"
            app:strokeColor="#6247AA"
            app:strokeWidth="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="10dp"
            android:text="@string/sign_in"
            android:textColor="#808080"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="75dp"
            android:hint="@string/email_hint"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etUserPassword"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="125dp"
            android:inputType="textPassword"
            android:hint="@string/password_hint" />

        <CheckBox
            android:id="@+id/cbRememberLoginCredentials"
            android:layout_width="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="160sp"
            android:text="@string/remember_password"
            android:textSize="16sp"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>