...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#E9ECEF"
    android:id="@+id/activity_home_navbar">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_bar_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
